@@ -1,4 +1,4 @@
-CHANGES.txt - 08/26/2002
+CHANGES.txt - 08/27/2002
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.22
@@ -17,6 +17,8 @@ CHANGES IN HTMLDOC v1.8.22
 	  a page.
 	- HTMLDOC didn't initialize the right number of TOC
 	  headings.
+	- When using a logo image in the header, the header was
+	  placed too low on the page.
 
 
 CHANGES IN HTMLDOC v1.8.21
